fix the header to be visible when scrolling the page

--- a/src/index.css
+++ b/src/index.css
@@ -30,23 +30,16 @@ header {
   width: 100%;
   display: flex;
   justify-content: center;
+  position: fixed;
+  top: 0;
 }
 
 main {
   display: flex;
+  margin-top: 2.5rem;
   flex-direction: column;
   justify-content: center;
   flex-grow: 1;
-}
-
-nav.listNav {
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  align-self: center;
-  align-content: stretch;
 }
 
 button {
